Docs spellcheck and update.